@@ -127,4 +127,10 @@
         - External dependencies:                 - Microsoft.Extensions.DependencyInjection v5.0.2 for targets netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0
                                                                                             v6.0.0 for targets net6.0
 
+  [18] AllOverIt.Pagination
+        - Targets                                - netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0
+        - AllOverIt dependencies:                - [1]
+                                                 - [16]
+        - External dependencies:                 - None
+
 =====================================================================================================================================================================
