@@ -19,6 +19,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\..\Source\AllOverIt.EntityFrameworkCore\AllOverIt.EntityFrameworkCore.csproj" />
       <ProjectReference Include="..\..\..\..\Source\AllOverIt.GenericHost\AllOverIt.GenericHost.csproj" />
+      <ProjectReference Include="..\..\..\..\Source\AllOverIt.Pagination\AllOverIt.Pagination.csproj" />
       <ProjectReference Include="..\..\..\..\Source\AllOverIt.Serialization.Abstractions\AllOverIt.Serialization.Abstractions.csproj" />
       <ProjectReference Include="..\..\..\..\Source\AllOverIt.Serialization.NewtonsoftJson\AllOverIt.Serialization.NewtonsoftJson.csproj" />
     </ItemGroup>
