@@ -1,0 +1,9 @@
+﻿using System.Reflection;
+
+namespace AllOverIt.Pagination
+{
+    public interface IColumnItem
+    {
+        PropertyInfo Property { get; }
+    }
+}
